# sysflake

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
lib/: Makefile.am  flake.c  sysflake.h
src/: Makefile.am  main.c
test/: Makefile.am  TestGenerate.cpp  TestSpec.cpp  main.cpp
